tests/sksl/errors/SwitchDuplicateDefault.dsl.glsl
### Compilation failed:

error: expected expression, but found 'default'
1 error
